force-app/main/default/objects/custom_create270__c/custom_create270__c.object-meta.xml
<CustomObject>
    <label>Custom created object270</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects270</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>