force-app/main/default/objects/custom_create270__c/fields/custom_create_270field510__c.field-meta.xml
<CustomField>
    <fullName>custom_create_270field510__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 270field510</label>
    <type>Checkbox</type>
</CustomField>