force-app/main/default/objects/custom_create270__c/fields/custom_create_270field527__c.field-meta.xml
<CustomField>
    <fullName>custom_create_270field527__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 270field527</label>
    <type>Checkbox</type>
</CustomField>